<resources>
    <string name="app_name">CargaApp</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellidos</string>
    <string name="id">Número de identificación</string>
    <string name="fecha">Fecha de nacimiento</string>
    <string name="celular">Número telefónico</string>
    <string name="rol">Rol</string>
    <string name="passwd">Contraseña</string>
    <string name="correo">Correo</string>

    <string-array name="roles">
        <item>Propietario de carga</item>
        <item>Propietario de camion</item>
        <item>Conductor de camion</item>
    </string-array>
    <string name="consultar_carga">Consultar cargas</string>
    <string name="solicitudes_de_carga_disponibles">Solicitudes de carga disponibles</string>
    <string name="cargas">Mis Cargas</string>
    <string name="conductores">Conductores</string>
</resources>